[package]
name = "shakespeare-monkey-solver"
default-run = "debug_env_bin"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "debug_env_bin"
path = "bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] 

[profile.release]
opt-level = 2 

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.81"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
