[package]
name = "shakespeare-monkey-solver"
default-run = "native_demo"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "native_demo"
path = "bin/native_demo.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.18.0"
serde = { version = "1", features = ["derive"], optional = true }
puffin = { version = "0.13.3", optional = true } 
puffin_http = { version = "0.10.0", optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] 
puffin_profile = ["puffin", "puffin_http"]

[profile.release]
opt-level = 2 

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.81"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
