[package]
name = "egui-demo"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "native_demo"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native_demo"
path = "bin/native_demo.rs"

[dependencies]
shakespeare-monkey-solver = { path = "../shakespeare-monkey-solver" }
eframe = "0.18.0"
serde = { version = "1", features = ["derive"], optional = true }
puffin = { version = "0.13.3", optional = true } 
puffin_http = { version = "0.10.0", optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] 
puffin_profile = ["puffin", "puffin_http"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
